syntax = "proto3";

package field;

service Field {
  rpc GetField (FieldRequest) returns (FieldReply) {}
}

message FieldRequest {
  bool slow = 1;
  bool unreliable = 2;
}

message FieldReply {
  string field = 1;
}
